--- a/client/react/app/App.less
+++ b/client/react/app/App.less
@@ -435,6 +435,20 @@ a {
   }
 }
 
+.progress-bar-container {
+  border: 1px solid @light-gray-3;
+  border-radius: 2px;
+  width: 100%;
+
+  .progress-bar {
+    background-color: @bright-blue;
+    height: 8px;
+    width: 0%;
+    transition: width linear 1s;
+    -webkit-transition: width linear 1s;
+  }
+}
+
 @media (max-width: 880px) {
   .app {
     // padding: 40px;
