Assign task points from dropdown instead of free form text field

--- a/client/react/app/components/tasks/Task.less
+++ b/client/react/app/components/tasks/Task.less
@@ -113,8 +113,13 @@
 }
 
 .task-points-input {
-  width: 120px;
+  min-width: 124px;
+  width: 124px;
   margin-bottom: 0px;
+
+  .dropdown-menu {
+    min-width: 144px;
+  }
 }
 
 .new-category-form {
