--- a/client/react/app/App.less
+++ b/client/react/app/App.less
@@ -389,7 +389,23 @@ a {
   min-width: 184px;
   position: relative;
 
+  &.-inline {
+    display: inline-block;
+    margin-right: @margin-default;
+  }
+
   .dropdown-toggle {
+    cursor: pointer;
+    // NB: most of this is copied from .input-default
+    border: 1px solid @gray;
+    border-radius: 4px;
+    display: block;
+    font-size: 18px;
+    font-weight: 300;
+    padding: 12px 24px;
+  }
+
+  .nav-dropdown-toggle {
     cursor: pointer;
     height: 48px;
     text-align: center;
@@ -404,23 +420,44 @@ a {
     float: right;
   }
 
-  .dropdown-menu {
+  .dropdown-menu, .nav-dropdown-menu {
     background-color: @white;
     border: 1px solid @border-gray;
     border-radius: 2px;
     display: none;
     left: 0px;
     position: absolute;
-    top: 54px;
     width: 100%;
     z-index: 99;
   }
 
+  .dropdown-menu {
+    top: 50px;
+  }
+
+  .nav-dropdown-menu {
+    top: 54px;
+  }
+
   .dropdown-item {
+    cursor: pointer;
     padding: 8px 16px;
+
+    &:first-child {
+      margin-top: 8px;
+    }
+
+    &:last-child {
+      margin-bottom: 8px;
+    }
 
     &:hover {
       background-color: @light-blue-hover;
+    }
+
+    &.-subtext {
+      font-size: 16px;
+      padding: 6px 24px;
     }
 
     &.last-item {
@@ -428,8 +465,12 @@ a {
     }
   }
 
+  .dropdown-subtext {
+    font-size: 12px;
+  }
+
   &.open {
-    .dropdown-menu {
+    .dropdown-menu, .nav-dropdown-menu {
       display: block;
     }
   }
