Set up new landing page to focus on the tasks for today

--- a/client/react/app/components/dashboard/Dashboard.less
+++ b/client/react/app/components/dashboard/Dashboard.less
@@ -36,12 +36,19 @@
 
 .dashboard-preview-points {
   margin-top: 16px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .dashboard-list-container {
   padding-left: 64px;
   width: 70%;
+}
+
+.dashboard-scorecard-container {
+  border-left: 1px solid @border-gray;
+  padding-left: 40px;
+  padding-top: 58px;
+  width: 64%;
 }
 
 .dashboard-preview-container {
