Upgrade webpack to v4

--- a/client/react/app/App.less
+++ b/client/react/app/App.less
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Covered+By+Your+Grace');
+@import (css) url('https://fonts.googleapis.com/css?family=Covered+By+Your+Grace');
 /* Fonts */
 @font-serif: 'Tinos', serif;
 @font-san-serif: 'Helvetica Neue', Arial, san-serif;
