--- a/client/react/app/App.less
+++ b/client/react/app/App.less
@@ -460,6 +460,10 @@ a {
       padding: 6px 24px;
     }
 
+    &.first-item {
+      border-bottom: 1px solid @border-gray;
+    }
+
     &.last-item {
       border-top: 1px solid @border-gray;
     }
