Initial setup for experimental Challenges feature

--- a/client/react/app/App.less
+++ b/client/react/app/App.less
@@ -278,8 +278,6 @@ a {
     &.on {
       border-color: @bright-blue;
       background-color: @bright-blue;
-      transition: all ease 0.2s;
-      -webkit-transition: all ease 0.2s;
     }
   }
 
@@ -290,8 +288,6 @@ a {
     &.on {
       color: @bright-blue;
       font-weight: 400;
-      transition: all ease 0.2s;
-      -webkit-transition: all ease 0.2s;
     }
   }
 }
@@ -351,6 +347,10 @@ a {
 
 .text-blue {
   color: @bright-blue;
+}
+
+.text-gray {
+  color: @toggle-gray;
 }
 
 .text-active {
