Allow user to subscribe to challenges in task settings view

--- a/client/react/app/components/tasks/Task.less
+++ b/client/react/app/components/tasks/Task.less
@@ -100,6 +100,19 @@
   }
 }
 
+.challenge-item {
+  padding: 4px 24px;
+
+  &.inactive {
+    color: @faded-gray;
+    opacity: 0.9;
+  }
+
+  .subscription-btn {
+    min-width: 168px;
+  }
+}
+
 .task-description-input,
 .new-category-input {
   width: 385px;
