Set up twilio and sendgrid plus minor cleanup

--- a/client/react/app/components/dashboard/Dashboard.less
+++ b/client/react/app/components/dashboard/Dashboard.less
@@ -141,7 +141,9 @@
     width: 100%;
   }
 
-  .dashboard-list-container {
+  .dashboard-list-container,
+  .dashboard-scorecard-container {
+    border: none;
     margin-top: 40px;
     padding: 0;
     width: 100%;
