Initial updates to task settings and onboarding new users with task suggestions

--- a/client/react/app/components/dashboard/Dashboard.less
+++ b/client/react/app/components/dashboard/Dashboard.less
@@ -46,6 +46,7 @@
 
 .dashboard-scorecard-container {
   border-left: 1px solid @border-gray;
+  min-height: 400px;
   padding-left: 40px;
   padding-top: 58px;
   width: 64%;
@@ -141,7 +142,9 @@
     width: 100%;
   }
 
-  .dashboard-list-container {
+  .dashboard-list-container,
+  .dashboard-scorecard-container {
+    border: none;
     margin-top: 40px;
     padding: 0;
     width: 100%;
