Ease task points opacity on hover

--- a/client/react/app/components/tasks/Task.less
+++ b/client/react/app/components/tasks/Task.less
@@ -51,6 +51,8 @@
 
   .task-points-label {
     opacity: 0.2;
+    transition: opacity ease 0.2s;
+    -webkit-transition: opacity ease 0.2s;
 
     &.on {
       opacity: 1;
