Initial setup of simplified mood tracker

--- a/client/react/app/components/dashboard/Dashboard.less
+++ b/client/react/app/components/dashboard/Dashboard.less
@@ -187,6 +187,16 @@
   }
 }
 
+.mood-selector-container {
+  padding: 16px 0px;
+
+  .mood-icon {
+    cursor: pointer;
+    height: 48px;
+    margin-right: 8px;
+  }
+}
+
 @media (max-width: 720px) {
   .dashboard-preview-container {
     width: 100%;
