Add icon for slightly better ui

--- a/client/react/app/App.less
+++ b/client/react/app/App.less
@@ -388,6 +388,11 @@ a {
   margin-right: 24px;
 }
 
+.forward-icon {
+  margin-left: 8px;
+  transform: rotate(180deg);
+}
+
 .saving-icon {
   margin-left: 8px;
 }
