--- a/client/react/app/components/dashboard/Dashboard.less
+++ b/client/react/app/components/dashboard/Dashboard.less
@@ -46,6 +46,12 @@
 
 .dashboard-depression-container {
   font-size: 14px;
+
+  img.forward-icon {
+    height: 14px;
+    vertical-align: -2px;
+    margin-left: 8px;
+  }
 }
 
 .dashboard-list-container {
