--- a/client/react/app/components/dashboard/Dashboard.less
+++ b/client/react/app/components/dashboard/Dashboard.less
@@ -41,11 +41,13 @@
 }
 
 .dashboard-mood-label {
+  margin-bottom: 16px;
   margin-top: 16px;
 }
 
 .dashboard-depression-container {
   font-size: 14px;
+  margin-top: 8px;
 
   img.forward-icon {
     height: 14px;
