Allow user to toggle view of assessments

--- a/client/react/app/components/checklist/Checklist.less
+++ b/client/react/app/components/checklist/Checklist.less
@@ -19,6 +19,12 @@
     width: 50%;
   }
 
+  .checklist-view-toggle {
+    margin-top: 4px;
+    text-align: right;
+    width: 40%;
+  }
+
   .checklist-overview {
     border: 1px solid @border-gray;
     border-radius: 4px;
@@ -101,6 +107,7 @@
 
   .checklist-progress-container {
     padding-bottom: 8px;
+    padding-top: 8px;
 
     .checklist-category {
       color: @gray;
@@ -125,6 +132,12 @@
 
   .checklist-header {
     width: 50%;
+  }
+
+  .checklist-view-toggle {
+    margin-top: 4px;
+    text-align: right;
+    width: 40%;
   }
 
   .checklist-overview {
