--- a/client/react/app/App.less
+++ b/client/react/app/App.less
@@ -1,7 +1,7 @@
-@import (css) url('https://fonts.googleapis.com/css?family=Covered+By+Your+Grace');
+@import (css) url('https://fonts.googleapis.com/css?family=Bellefair|Quicksand:300,400,500');
 /* Fonts */
-@font-serif: 'Tinos', serif;
-@font-san-serif: 'Helvetica Neue', Arial, san-serif;
+@font-serif: 'Bellefair', serif;
+@font-san-serif: 'Quicksand', 'Helvetica Neue', Arial, san-serif;
 @font-handwritten: 'Covered By Your Grace', cursive;
 
 /* Colors */
@@ -52,33 +52,37 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: @font-san-serif;
   letter-spacing: 0.4px;
   margin-top: 8px;
   margin-bottom: @margin-default;
 }
 
 h1 {
+  font-family: @font-serif;
   font-size: 44px;
   font-weight: 100;
 }
 
 h2 {
+  font-family: @font-serif;
   font-size: 36px;
   font-weight: 300;
 }
 
 h3 {
+  font-family: @font-san-serif;
   font-size: 28px;
   font-weight: 400;
 }
 
 h4 {
+  font-family: @font-san-serif;
   font-size: 24px;
   font-weight: 500;
 }
 
 h5 {
+  font-family: @font-san-serif;
   font-size: 16px;
   font-weight: 400;
 }
@@ -313,7 +317,7 @@ a {
 }
 
 .text-handwritten {
-  font-family: @font-handwritten;
+  font-family: @font-san-serif;
 }
 
 .text-light {
