Update analytics reporting view, update navbar (WIP)

--- a/client/react/app/components/experimental/Assessment.less
+++ b/client/react/app/components/experimental/Assessment.less
@@ -15,7 +15,7 @@
 }
 
 .assessment-header {
-  width: 50%;
+  // width: 50%;
 }
 
 .assessment-view-toggle {
@@ -30,6 +30,12 @@
   padding: 24px;
   text-align: center;
   width: 48%;
+}
+
+.assessment-header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .assessment-question-container {
