--- a/client/react/app/App.less
+++ b/client/react/app/App.less
@@ -328,6 +328,10 @@ a {
   font-weight: 100;
 }
 
+.text-med {
+  font-weight: 500;
+}
+
 .text-heavy {
   font-weight: 800;
 }
@@ -351,6 +355,14 @@ a {
 
 .text-inactive {
   color: @gray-2;
+}
+
+.text-left {
+  text-align: left !important;
+}
+
+.text-right {
+  text-align: right !important;
 }
 
 .text-ellipsis {
