--- a/client/react/app/components/experimental/Activity.less
+++ b/client/react/app/components/experimental/Activity.less
@@ -25,7 +25,7 @@
 
 .default-container.simple {
   margin: 0 auto;
-  padding: 32px;
+  padding: 48px 32px;
   display: flex;
 }
 
@@ -53,6 +53,34 @@
   border-radius: 4px;
   padding: 32px 24px;
   width: 40%;
+}
+
+.analytics-container {
+  width: 100%;
+
+  .analytics-section-container {
+    background-color: @white;
+    border-radius: 4px;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+    padding: 32px 16px;
+    margin-bottom: 32px;
+  }
+}
+
+.activity-details-container,
+.analytics-container {
+  .close-activity-details {
+    cursor: pointer;
+    font-size: 12px;
+    color: @red;
+    letter-spacing: 0.4px;
+    margin-top: -16px;
+    opacity: 0.8;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
 
   .tag-box {
     border-radius: 4px;
@@ -252,8 +280,8 @@
       background-color: @white;
       border: 1px solid @orange;
       border-radius: 50%;
-      height: 24px;
-      width: 24px;
+      height: 32px;
+      width: 32px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -526,7 +554,8 @@
   }
 }
 
-.activity-overview-table {
+.activity-overview-table,
+.analytics-table {
   width: 100%;
   font-size: 14px;
   border-bottom: 1px solid @light-beige;
@@ -547,15 +576,25 @@
     background-color: @orange;
     font-weight: 500;
     font-size: 12px;
-    padding: 8px 4px 6px;
+    letter-spacing: 0.4px;
+    padding: 8px 8px 6px 8px;
+
+    &:first-child {
+      border-radius: 2px 0px 0px 0px;
+    }
+
+    &:last-child {
+      border-radius: 0px 2px 0px 0px;
+    }
   }
 
   td {
     border-top: 1px solid @light-beige;
-    padding: 8px 4px;
+    padding: 8px;
   }
 
-  .activity-overview-row {
+  .activity-overview-row,
+  .analytics-row {
     cursor: pointer;
 
     &:hover {
