--- a/client/react/app/components/navbar/NavBar.less
+++ b/client/react/app/components/navbar/NavBar.less
@@ -1,5 +1,12 @@
 @gray: #979797;
 @light-gray-2: #D8D8D8;
+@white: #fff;
+// new
+@black: #382210;
+@beige: #F4E6DB;
+@orange: #E5AF70;
+@orange-brown: #E6AF70;
+@light-brown: #B88C5A;
 
 .nav-container {
   border-bottom: 1px solid @light-gray-2;
@@ -41,5 +48,65 @@
 @media (max-width: 480px) {
   .nav-content {
     padding: 0px 16px;
+  }
+}
+
+.navbar-wrapper {
+  background-color: @white;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+
+  .navbar-container {
+    color: @black;
+    font-weight: bold;
+    line-height: normal;
+    font-size: 18px;
+    max-width: 1080px;
+    margin: 0 auto;
+    padding: 36px 32px 32px 32px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    letter-spacing: 0.4px;
+  }
+
+  .navbar-logo-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .navbar-logo {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    margin-right: 16px;
+    background: @orange-brown;
+    // background: linear-gradient(
+    //   45deg,
+    //   @beige 0%,
+    //   @orange-brown 50%,
+    //   @light-brown 95%
+    // );
+  }
+
+  .navbar-title {
+    color: @light-brown;
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: 4px;
+  }
+
+  .navbar-menu {
+    display: flex;
+  }
+
+  .navbar-item {
+    cursor: pointer;
+    color: @black;
+    margin-left: 36px;
+    padding: 8px 2px 4px;
+
+    &.active {
+      border-bottom: 4px solid @orange-brown;
+    }
   }
 }
