--- a/client/react/app/components/home/Home.less
+++ b/client/react/app/components/home/Home.less
@@ -1,8 +1,23 @@
 @font-large: 42px;
+@white: #fff;
+@black: #382210;
 
 .login-header,
 .signup-header {
   margin-top: 120px;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  min-width: 480px;
+  width: 30%;
+  margin: 80px auto;
+  text-align: center;
+  padding: 48px 32px;
+  border-radius: 4px;
+  // background-color: @white;
+  // box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .blog-title {
