Update home view, update journal entry styling a bit for consistency

--- a/client/react/app/App.less
+++ b/client/react/app/App.less
@@ -193,6 +193,8 @@ a {
   text-align: left;
   background: transparent;
   border: none;
+  color: @black;
+  font-weight: bold;
 
   &:hover {
     background: transparent;
