--- a/client/react/app/components/entry/Entry.less
+++ b/client/react/app/components/entry/Entry.less
@@ -1,6 +1,7 @@
 @border-gray: #d3d3d3;
 @faded-gray: #b4b4b4;
 @black: #2b2b2b;
+@orange: #E5AF70;
 
 .entry-content {
   color: @black;
@@ -21,8 +22,7 @@
 }
 
 .entry-container {
-  border-top: 1px solid @border-gray;
-  width: 52%;
+  border-top: 1px solid @orange;
 
   .entry-content {
     cursor: pointer;
